# LopezPoblanoRobotica2025-1

examen_bringup/: CMakeLists.txt  package.xml
examen_bringup/examen_bringup/src/: multi_tray.py  trajectory_test.py  tray_test.py
examen_bringup/install/: local_setup.sh  setup.sh
examen_bringup/install/examen_bringup/share/ament_index/resource_index/package_run_dependencies/: examen_bringup
examen_bringup/install/examen_bringup/share/ament_index/resource_index/parent_prefix_path/: examen_bringup
examen_bringup/install/examen_bringup/share/examen_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.sh  package.zsh
examen_bringup/install/examen_bringup/share/examen_bringup/cmake/: examen_bringupConfig-version.cmake  examen_bringupConfig.cmake
examen_bringup/install/examen_bringup/share/examen_bringup/environment/: ament_prefix_path.dsv  path.dsv
examen_bringup/launch/: Propuesta2_pos_controller.launch.py  position_controller_scara.launch.py  simple_controller_scara.launch.py  trajectory_controller_scara.launch.py
examen_bringup/log/: latest_build
examen_bringup/rviz/: Propuesta2_rviz.rviz
examen_bringup/src/: position_test.py  trajectory_test.py  tray_test.py
examen_bringup/worlds/: prueba.world  test_w_1.world
examen_description/: CMakeLists.txt  package.xml
examen_description/Report/: Examen2Robotica.ipynb  ExamenPlanteamiento.mlx
examen_description/urdf/: scara.urdf  (+17 more)
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
practica1_description/: CMakeLists.txt
(+79 files in other folders)
